Inject Launch Services database before NSApplication is initialized https://bugs.webkit.org/show_bug.cgi?id=235186 <rdar://87468788>

Reviewed by Chris Dumez and Simon Fraser.

To avoid the main thread getting stuck, the Launch Services database should be injected before NSApplication
is initialized, since the initialization now depends on the database.

* WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::platformDidReceiveLoadParameters):
* WebProcess/cocoa/LaunchServicesDatabaseManager.h:
* WebProcess/cocoa/LaunchServicesDatabaseManager.mm:
(WebKit::LaunchServicesDatabaseManager::waitForDatabaseUpdate):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):



Canonical link: https://commits.webkit.org/246045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288019 268f45cc-cd09-0410-ab3c-d52691b4dbfc