Source/WebKit/WebProcess/cocoa/LaunchServicesDatabaseManager.h
@@ -35,11 +35,13 @@ class LaunchServicesDatabaseManager : public WebKit::XPCEndpointClient {
 public:
     static LaunchServicesDatabaseManager& singleton();
 
-    bool waitForDatabaseUpdate(Seconds);
+    void waitForDatabaseUpdate();
 
 private:
     void handleEvent(xpc_object_t) override;
     void didConnect() override;
+
+    bool waitForDatabaseUpdate(Seconds);
 
     std::atomic<bool> m_hasReceivedLaunchServicesDatabase { false };
     BinarySemaphore m_semaphore;
